<resources>
    <string name="app_name">IntenAlvin</string>
    <string name="move_activity">PINDAH AKTIVITI</string>
    <string name="move_with_data">PINDAH AKTIVITI DENGAN DATA</string>
    <string name="dail_number">PANGGIL TELEPON</string>
    <string name="move_with_result">PINDAH AKTIVITI UNTUK RESULT</string>
    <string name="result_forom_activity">HASIL DARI ACTIVITI</string>
    <string name="choose_color">PILIH WARNA YANG KAMU SUKA</string>
    <string name="_blue">BIRU</string>
    <string name="_yellow">KUNING</string>
    <string name="_red">MERAH</string>
    <string name="_polkadot">POLKADOT</string>
    <string name="choose">PILIH</string>
    <string name="data_recevied">DATA DI TERIMA</string>
    <string name="this_ismove_activity">INI PINDAH AKTIVITI</string>
</resources>